# swiftest

./: .dockerignore  .env  .gitignore  .gitmodules  .readthedocs.yaml  .zenodo.json  CHANGELOG  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.GNU-Linux  Dockerfile.Intel  Dockerfile.gnu  Dockerfile.intel  LICENSE  Makefile  Makefile.Defines  Makefile.Defines_example  README.md  README.swifter  build.sh  calc_ring_mass.py  copy_setup_sim_ring_capture.py  descriptionator.sh  distclean.cmake  environment.yml  fortran_doc.md  fortran_docs.md  mkdocs.yml  ps_maker.py  pyproject.toml  read_nc_sim.ipynb  requirements.txt  scatter_movie.ipynb  setup.py  setup_sim.py  setup_sim_ring_capture.py  swiftest.def  swiftest.sh  tp_maker.py  (+1 more)
collresolve/: .gitignore  Makefile.am  README.md  collresolve.c  collresolve.h  collresolve_for.c  collresolve_python.c  config.h  configure.ac  example.py  setup.py
collresolve/cambioni2019/: CompactClassificationECOC.c  CompactClassificationECOC.h  CompactSVM.c  CompactSVM.h  Poly.c  Poly.h  accretion_efficiency.c  accretion_efficiency.h  bsxfun.c  bsxfun.h  collision_classifier.c  collision_classifier.h  collision_classifier_types.h  minOrMax.c  minOrMax.h  orbital_hnr.c  orbital_hnr.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
python/: .gitignore  CMakeLists.txt  setup.py  setup.py.in  swifter2swiftest.py  swiftest.py  swiftestreader.py
python/swiftest/: README.md  requirements.txt  setup.py
python/swiftestio/: .gitignore  README.md  requirements.txt  setup.py  swiftestio.py
src/: CMakeLists.txt
src/base/: base_module.f90
src/bindings/: .gitignore  CMakeLists.txt  bindings.pyx  bindings_module.f90
src/coarray/: coarray_clone.f90  coarray_collect.f90  coarray_module.f90
src/collision/: collision_check.f90  collision_generate.f90  collision_io.f90  collision_module.f90  collision_regime.f90  collision_resolve.f90  collision_setup.f90  collision_util.f90  swiftest_io.f90
src/coord/: coord.f90  coord_h2b.f90  coord_h2b_pl.f90  coord_h2b_tp.f90  coord_vb2vh.f90  coord_vb2vh_pl.f90  coord_vb2vh_tp.f90  coord_vh2vb.f90  coord_vh2vb_pl.f90  coord_vh2vb_tp.f90
src/discard/: discard.f90  discard_peri.f90  discard_pl.f90  discard_pl_close.f90  discard_spill.f90  discard_sun.f90  discard_system.f90  discard_tp.f90  discard_tp_pl.f90
src/drift/: drift.f90  drift_dan.f90  drift_kepmd.f90  drift_kepu.f90  drift_kepu_fchk.f90  drift_kepu_guess.f90  drift_kepu_lag.f90  drift_kepu_new.f90  drift_kepu_p3solve.f90  drift_kepu_stumpff.f90  drift_one.f90
src/drift_vec/: drift_kepu.f90  drift_kepu_fchk.f90  drift_kepu_new.f90  drift_kepu_p3solve.f90  drift_vec_dan.f90  drift_vec_kepmd.f90  drift_vec_kepu.f90  drift_vec_kepu_fchk.f90  drift_vec_kepu_guess.f90  drift_vec_kepu_lag.f90  drift_vec_kepu_new.f90  drift_vec_kepu_p3solve.f90  drift_vec_kepu_stumpff.f90  drift_vec_one.f90
src/driftkick/: drift.f90  kick.f90
src/dust/: dust_module.f90
src/encounter/: encounter.f90  encounter_check.f90  encounter_io.f90  encounter_module.f90  encounter_placeholder.f90  encounter_setup.f90  encounter_util.f90
src/eucl/: eucl.f90
src/fraggle/: fraggle_generate.f90  fraggle_io.f90  fraggle_module.f90  fraggle_placeholder.f90  fraggle_regime.f90  fraggle_resolve.f90  fraggle_set.f90  fraggle_setup.f90  fraggle_util.f90
src/fragmentation/: fragmentation.f90
src/fxdr/: Makefile.tmpl
src/fxdr_2.1c/: Makefile.fxdr
src/globals/: .gitignore  globals_module.f90  globals_module.f90.in
src/gr/: gr.f90  gr_getaccb_ns.f90  gr_getaccb_ns_tp.f90  gr_io_init_pl.f90  gr_io_init_tp.f90  gr_orbel_xv2aeq.f90  gr_orbel_xv2aqt.f90  gr_orbel_xv2el.f90  gr_pseudovel2vel.f90  gr_vel2pseudovel.f90  gr_whm_getacch.f90  gr_whm_p4.f90
src/helio/: helio_allocate_pl.f90  helio_allocate_tp.f90  helio_coord.f90  helio_deallocate_pl.f90  helio_deallocate_tp.f90  helio_discard.f90  helio_drift.f90  helio_drift_pl.f90  helio_drift_tp.f90  helio_getacch.f90  helio_getacch_int.f90  helio_getacch_int_pl.f90  helio_getacch_int_tp.f90  helio_getacch_pl.f90  helio_getacch_tp.f90  helio_gr.f90  helio_kick.f90  helio_kickvb.f90  helio_kickvb_pl.f90  helio_kickvb_tp.f90  helio_lindrift.f90  helio_lindrift_pl.f90  helio_lindrift_tp.f90  helio_module.f90  helio_pl_allocate.f90  helio_pl_deallocate.f90  helio_setup.f90  helio_spill_tp.f90  helio_step.f90  helio_step_pl.f90  helio_step_tp.f90  helio_tp_allocate.f90  helio_user_getacch_pl.f90  helio_user_getacch_tp.f90  helio_util.f90
src/io/: io.f90  io_config_reader.f90  io_config_writer.f90  io_discard_write_symba.f90  io_dump.f90  io_dump_config.f90  io_dump_param.f90  io_dump_pl.f90  io_dump_tp.f90  io_get_command_line_arguments.f90  io_get_token.f90  io_getn.f90  io_init_param.f90  io_init_pl.f90  io_init_tp.f90  io_initialize_system.f90  io_open.f90  io_open_fxdr.f90  io_progress_bar.f90  io_read.f90  io_read_cb_in.f90  io_read_config_file_name.f90  io_read_config_in.f90  io_read_encounter.f90  io_read_hdr.f90  io_read_line.f90  io_read_param_in.f90  io_read_pl_in.f90  io_read_tp_in.f90  io_udio_reader.f90  io_udio_writer.f90  io_write.f90  io_write_encounter.f90  io_write_frame.f90  io_write_hdr.f90  io_write_line.f90  python_io_write_frame_pl.f90  python_io_write_frame_tp.f90
src/kick/: kick.f90
src/main/: main.f90  swiftest_driver.f90  swiftest_helio.f90  swiftest_symba.f90
src/misc/: io_progress_bar_module.f90  lambda_function_module.f90  laplace_coefficient_module.f90  minimizer_module.f90  solver_module.f90
src/module/: module_fxdr.f90  module_globals.f90  module_helio.f90  module_interfaces.f90  module_nrutil.f90  module_parameters.f90  module_swifter.f90  module_swiftest.f90  module_swiftestalloc.f90  module_symba.f90  (+1 more)
swiftest/: .gitignore  CMakeLists.txt  __init__.py  _bindings.h  _bindings.pyx  _version.py  cli.py  cli_caf.py  constants.py  core.h  core.pyx  data.py  init_cond.py  io.py  shgrav.py  simulation.py  simulation_class.py  sph_harmonics.py  sph_harmonics_gravity.py  swiftest  tool.py  visualize.py  wrapper.py
test/: CMakeLists.txt  test_suite.py
(+2782 files in other folders)
