[project]
name = "swiftest"
version = "2024.4.0"
authors=[
    {name = 'David A. Minton', email='daminton@purdue.edu'},
    {name = 'Carlisle Wishard'},
    {name = 'Jennifer Pouplin'},
    {name = 'Jake Elliott'},
    {name = 'Dana Singh'},
    {name = 'Kaustub Anand'},
]
maintainers = [
    {name = 'David A. Minton', email='daminton@purdue.edu'},
]
readme = "README.md"
requires-python=">=3.9"
license={file = "LICENSE"}
classifiers=[
'Development Status :: 4 - Beta',
'Intended Audience :: Science/Research',
'Topic :: Scientific/Engineering :: Astronomy',
'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
'Programming Language :: Python :: 3',
]
keywords=['astronomy','astrophysics', 'planetary', 'n-body',  'integrator', 'symplectic', 'wisdom-holman', 'symba']
dependencies = [
    'numpy>=1.26.4',
    'cython>=3.0.8',
    'scipy>=1.12.0',
    'h5py>=3.10.0',
    'netcdf4>=1.6.5',
    'h5netcdf>=1.3.0',
    'dask>=2024.2.1',
    'distributed>=2024.2.1',
    'bottleneck>=1.3.8',
    'xarray>=2024.2.0',
    'matplotlib>=3.8.3',
    'astropy>=6.0.0',
    'astroquery>=0.4.6',
    'tqdm>=4.66.2',
]

[project.optional-dependencies]
pyshtools = ["pyshtools>=4.12.2"] 

[project.urls]
repository = 'https://github.com/MintonGroup/swiftest'
documentation = 'https://swiftest.readthedocs.io/en/latest/'
changelog = 'https://swiftest.readthedocs.io/en/latest/whats-new.html'

[project.scripts]
swiftest = "swiftest.cli:main"

[build-system]
requires = [
    "python_version>='3.9'",
    "scikit-build-core>=0.8.2",
    "cython>=3.0.8",
    "numpy>=1.26.4",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.23.1"
ninja.version = ">=1.11.1"
sdist.include = ["src/globals/globals_module.f90.in","swiftest/*.py","swiftest/*.pyx","swiftest/*.h"]
build-dir = "build/{wheel_tag}"
cmake.verbose = true

[tool.cibuildwheel]
test-command = "pytest -vv {package}/tests"
test-requires = [
    "python_version>='3.9'",
    "pytest>=8.0.0",
    "numpy>=1.26.4"
]
skip = "pp* *i686 *-manylinux_i686 *_ppc64le *_s390x *-musllinux* *-win32"
build-verbosity = 1

[tool.cibuildwheel.macos.environment]
SKBUILD_CMAKE_ARGS="-DMACHINE_CODE_VALUE=generic"
PREFIX="$(pwd)/build/deps/usr/local"
NETCDF_FORTRAN_HOME="${PREFIX}"
NETCDF_FORTRAN_INCLUDE="${NETCDF_FORTRAN_HOME}/include"
NETCDF_DIR="${NETCDF_FORTRAN_HOME}/lib/cmake/netCDF"
NETCDF_FORTRAN_DIR="${NETCDF_FORTRAN_HOME}/lib/cmake/netCDF"
SHTOOLS_HOME="${PREFIX}"
MACOSX_DEPLOYMENT_TARGET="$(buildscripts/get_macosx_deployment_target.sh)"
HOMEBREW_PREFIX="$(brew --prefix)"
ARCH="$(uname -m)"
LD_LIBRARY_PATH="${PREFIX}/lib:${HOMEBREW_PREFIX}/lib"
DYLD_LIBRARY_PATH="${LD_LIBRARY_PATH}"
REPAIR_LIBRARY_PATH="${LD_LIBRARY_PATH}"
LDFLAGS="-Wl,-no_compact_unwind -L${PREFIX}/lib -L${HOMEBREW_PREFIX}/lib" 
CPATH="${PREFIX}/include:${HOMEBREW_PREFIX}/include"
CPPFLAGS="-isystem ${PREFIX}/include"
FCFLAGS="-arch ${ARCH}"
FFLAGS="${FCFLAGS}"
CFLAGS="${FCFLAGS} -Wno-deprecated-non-prototype -arch ${ARCH}"
CXXFLAGS="${CFLAGS}"
PATH="${PREFIX}/bin:${PATH}"

[tool.cibuildwheel.linux.environment]
SKBUILD_CMAKE_ARGS="-DMACHINE_CODE_VALUE=generic"
PREFIX="$(pwd)/build/deps/usr/local"
NETCDF_FORTRAN_HOME="${PREFIX}"
NETCDF_FORTRAN_INCLUDE="${NETCDF_FORTRAN_HOME}/include"
NETCDF_DIR="${NETCDF_FORTRAN_HOME}/lib/cmake/netCDF"
NETCDF_FORTRAN_DIR="${NETCDF_FORTRAN_HOME}/lib/cmake/netCDF"
SHTOOLS_HOME="${PREFIX}"
CPATH="${PREFIX}/include:${CPATH}"
PATH="${PREFIX}/bin:${PATH}"
LD_LIBRARY_PATH="${PREFIX}/lib:${HOMEBREW_PREFIX}/lib"
CFLAGS="-Wa,--noexecstack"
CXXFLAGS="${CFLAGS}"
LDFLAGS="-L${PREFIX}/lib"
REPAIR_LIBRARY_PATH="${LD_LIBRARY_PATH}"

[tool.cibuildwheel.macos]
before-all = [
    "brew install coreutils pkg-config fftw vecLibFort;buildscripts/build_dependencies.sh"
]
repair-wheel-command = """\
DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel \
--require-archs {delocate_archs} -w {dest_dir} -v {wheel}
"""

[tool.cibuildwheel.linux]
skip = "pp* *-manylinux_i686* *-musllinux* cp312-*_aarch64*"
before-all = [
    "yum install epel-release -y",
    "yum install doxygen libxml2-devel libcurl-devel fftw-static openblas-static -y",
    "buildscripts/build_dependencies.sh"
]

[[tool.scikit-build.generate]]
path = "version.txt"
location = "source"
template = '''${version}'''
