lib_LTLIBRARIES = libcollresolve.la

include_HEADERS = collresolve.h

libcollresolve_la_SOURCES = collresolve.c collresolve_for.c cambioni2019/accretion_efficiency.c cambioni2019/bsxfun.c cambioni2019/collision_classifier.c cambioni2019/CompactClassificationECOC.c cambioni2019/CompactSVM.c cambioni2019/minOrMax.c cambioni2019/orbital_hnr.c  cambioni2019/Poly.c cambioni2019/rtGetInf.c cambioni2019/rtGetNaN.c cambioni2019/rt_nonfinite.c
